@@ -171,6 +171,10 @@ HISTORY
 
   ++ Bugfixes:
 
+  2015-02-13: Simon Goldschmidt
+  * msg_in.c: fixed bug #22070 "MIB_OBJECT_WRITE_ONLY not implemented in SNMP"
+
+  2015-02-12: Simon Goldschmidt
   * ip.h, ip4.c, ip6.c: fixed bug #36403 "ip4_input() and ip6_input() always pass
     inp to higher layers": now the accepting netif is passed up, but the input
     netif is available through ip_current_input_netif() if required.
